--- a/signal_processing/fir_filter/R言語を用いたFIRフィルターの作成.ipynb
+++ b/signal_processing/fir_filter/R言語を用いたFIRフィルターの作成.ipynb
@@ -9,11 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attaching package: ‘signal’\n",
+      "\n",
+      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    filter, poly\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#signalパッケージのダウンロード\n",
     "#install.packages('signal')\n",
@@ -23,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -62,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -100,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -108,7 +122,8 @@
    "source": [
     "#バンドパスフィルタの設計\n",
     "#FIRフィルターの各パラメータ\n",
-    "fil_N <- 512 #フィルターの次数\n",
+    "fil_N <- 128\n",
+    "#フィルターの次数\n",
     "fs <- 1000  #サンプリング周波数\n",
     "fn <- fs/2  #ナイキスト周波数\n",
     "fc <- c(5,15) #帯域通過周波数\n",
@@ -119,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -157,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -169,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
